remove jquery dependency, update version

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "newsfeed-by-amalker",
-  "version": "0.6.0",
-  "description": "RSS news feed",
+  "name": "feed-aggregator-by-amalker",
+  "version": "0.7.0",
+  "description": "RSS feed aggregator",
   "private": true,
   "scripts": {
     "build": "webpack",
@@ -14,7 +14,7 @@
   "keywords": [
     "javascript",
     "rss",
-    "news",
+    "aggregator",
     "feed",
     "hexlet"
   ],
@@ -28,7 +28,6 @@
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
     "i18next": "^19.3.2",
-    "jquery": "^3.4.1",
     "lodash": "^4.17.15",
     "melanke-watchjs": "^1.5.2",
     "popper.js": "^1.16.1",
